plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = 'it.edu.iisvoltapescara'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
}

java {
    java.toolchain.languageVersion.set(JavaLanguageVersion.of(8));
}

shadowJar {
    archiveFileName.set('libreria.jar')
    manifest {
        attributes 'Main-Class': 'it.edu.iisvoltapescara.libreria.Main'
    }
}